# ai-counter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.podman.md  install.sh  pyproject.toml
docker/: Dockerfile  build.sh  crontab  entrypoint.sh  install-tools.sh  run-daily.sh  setup-timezone.sh
prompts/: daily.yaml
sandbox/: README.md  README.template.md  bootstrap.sh  config.example.yaml  cursor-cli-config.example.json  skills.yaml
sandbox/ai-counter/: config.yaml
sandbox/ai-counter/prompts/: daily.yaml
scripts/: chown-sandbox.sh  docker-run.sh  doctor.sh  install-sandbox-skills.sh  install_sandbox_skills.py  integration-test.sh  podman-run.sh  vendor-z8l.sh
scripts/lib/: host-ids.sh  image.sh  load-env.sh  strings.sh
src/ai_counter/: __init__.py  config.py  daily.py  preflight.py  sessions.py  skills.py
