[project]
name = "ai-counter"
version = "0.1.0"
description = "Sandbox HOME + Docker orchestrator for cursor-agent and z8l upload"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
ai-counter = "ai_counter.daily:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_counter"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "prompts"
